Edited wiki page through web user interface.

--- a/wiki/NewFeatures_1_1.wiki
+++ b/wiki/NewFeatures_1_1.wiki
@@ -2,10 +2,10 @@
 
 = 1.1.3 =
 
- * You can now either use oAW/Xtend or M2T/Xpand for the transformation (thanks to Earl Waldin from paranor). You have to choose the appropriate plug-in {{de.itemis.gmf.tools.oaw}} or {{de.itemis.gmf.tools.m2t}}.
- * The templates have been migrated to GMF 2.2RC3. The 2.1 templates are still there and can still be used. Make sure to point your {{Tempate Directory}} to the right location.
+ * You can now either use oAW/Xtend or M2T/Xpand for the transformation (thanks to Earl Waldin from paranor). You have to choose the appropriate plug-in {{{de.itemis.gmf.tools.oaw}}} or {{{de.itemis.gmf.tools.m2t}}}.
+ * The templates have been migrated to GMF 2.2RC3. The 2.1 templates are still there and can still be used. Make sure to point your {{{Tempate Directory}}} to the right location.
  * The example has been migrated to GMF2.2RC3. It will no longer work with GMF 2.1.
- * You should not put the {{gmfgen.ecore}} in the directory where your models reside. This will cause an error with GMF 2.2. Rather than that, add a dependency from your model plug-in to {{de.itemis.gmf.runtime.extensions}}.
+ * You should not put the {{{gmfgen.ecore}}} in the directory where your models reside. This will cause an error with GMF 2.2. Rather than that, add a dependency from your model plug-in to {{{de.itemis.gmf.runtime.extensions}}}.
 
 
 = New Features in Version 1.1.0 =
