--- a/wiki/Prerequistes.wiki
+++ b/wiki/Prerequistes.wiki
@@ -7,14 +7,14 @@ The GMFTools can be run in two configurations:
  * Eclipse Galileo 3.5RC3 http://www.eclipse.org/downloads/
  * GMF 2.2RC3 http://www.eclipse.org/modeling/gmf/
  * M2T/Xpand 0.7 http://wiki.eclipse.org/Xpand
- * make sure to install {{de.itemis.gmf.tools.m2t}}
+ * make sure to install {{{de.itemis.gmf.tools.m2t}}}
 
 or
 
  * Eclipse Ganymede 3.4 http://www.eclipse.org/downloads/
  * GMF 2.1.0 http://www.eclipse.org/modeling/gmf/
  * openArchitectureWare 4.3 http://wiki.eclipse.org/OAW
- * make sure to install {{de.itemis.gmf.tools.oaw}}
+ * make sure to install {{{de.itemis.gmf.tools.oaw}}}
 
 You can download a large bundle containing everything but GMF and its prerequisites in the download section of
 http://oaw.itemis.de/
