--- a/wiki/NewFeatures_1_1.wiki
+++ b/wiki/NewFeatures_1_1.wiki
@@ -1,12 +1,33 @@
 #summary New and Noteworthy in 1.1
 
-= 1.1.3 =
+= New Features in 1.1.4 = 
+ * Definition file (.def), being used to generate a GMF editor via the context menu entry (see changes for 1.1.2) may now also specify options to override those settings in the preferences store. A sample entry within a .def file may look as follows:
+
+{{{
+  # Properties for GMF Tools Engine
+  deleteGmfGenModel = true
+  transformMapping2GmfGenModel = true
+  transformGmfGenModels = true
+  fixRegisteredTypes = true
+  deletegeGeneratedDiagramPlugin = true
+  generateDiagramPlugin = true
+}}}
 
  * You can now either use oAW/Xtend or M2T/Xpand for the transformation (thanks to Earl Waldin from paranor). You have to choose the appropriate plug-in {{{de.itemis.gmf.tools.oaw}}} or {{{de.itemis.gmf.tools.m2t}}}.
  * The templates have been migrated to GMF 2.2RC3. The 2.1 templates are still there and can still be used. Make sure to point your {{{Tempate Directory}}} to the right location.
  * The example has been migrated to GMF2.2RC3. It will no longer work with GMF 2.1.
  * You should not put the {{{gmfgen.ecore}}} in the directory where your models reside. This will cause an error with GMF 2.2. Rather than that, add a dependency from your model plug-in to {{{de.itemis.gmf.runtime.extensions}}}.
 
+= New Features in 1.1.2 = 
+ * Added context menu action to generate a GMF editor based on the GMF model settings specified in a .def file (and not based on GMF model entries in the preferences). The .def file is a simply property file of the following form:
+{{{
+  # Definition file read by GMF Tools Engine
+  gmfmap = /org.vires.diagram.functions.def/model/Vires_Functions.gmfmap
+  genmodel = /org.vires.model/model/Vires_Functions.genmodel
+  ext = /org.vires.diagram.functions.def/model/Vires_Functions.ext
+  gmfgen = /org.vires.diagram.functions.def/model/Vires_Functions.gmfgen
+  transformedgmfgen = /org.vires.diagram.functions.def/model/Vires_Functions.transformed.gmfgen
+}}}
 
 = New Features in Version 1.1.0 =
 
