Edited wiki page through web user interface.

--- a/wiki/Implementing_java_constraints.wiki
+++ b/wiki/Implementing_java_constraints.wiki
@@ -1,4 +1,4 @@
-#How to implement Java-constraints in a easy way without touching the generated code.
+#summary How to implement Java-constraints in a easy way without touching the generated code.
 
 = Introduction =
 
